--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
 function blackOrange(){ 
 document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/orange.png')";
 }
-
+<html>
+      <body>
+      <head>
 <body onload="startTime()"> 
 
   <center><h1><br><br><br><br><div id="txt"><br><div id="date"></h1></div></center>
@@ -136,3 +138,6 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
  <a href="#" <button onclick="blackOrange()">BlackOrange</button></a>
   </div>
 </div>
+        </body>
+        </head>
+        </html>
