--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
       <head>
 <body onload="startTime()"> 
 
-  <center><h1><br><br><br><br><div id="txt"><br><div id="date"></h1></div></center>
+  <center><h1><div id="txt"><br><div id="date"></h1></div></center>
   
   <div class="dropdown" style="float:right;">
   <button class="dropbtn">Settings</button>
