--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+<html>
+      <body>
+            </head>
 <style>
       .dropbtn {
   background-color: #4CAF50;
@@ -114,9 +116,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
 function blackOrange(){ 
 document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/orange.png')";
 }
-<html>
-      <body>
-      <head>
+      </script>
 <body onload="startTime()"> 
 
   <center><h1><div id="txt"><br><div id="date"></h1></div></center>
