--- a/index.html
+++ b/index.html
@@ -70,26 +70,32 @@ function checkTime(i) {
 }
 
 function blue(){ 
+      document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/blank.png')";
  document.body.style.backgroundColor = "blue";
 }
 
 function green(){ 
+            document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/blank.png')";
  document.body.style.backgroundColor = "green";
 }
 
 function red(){ 
+            document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/blank.png')";
  document.body.style.backgroundColor = "red";
 }
 
 function purple(){ 
+            document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/blank.png')";
  document.body.style.backgroundColor = "purple";
 }
 
-function yellow(){ 
+function yellow(){       
+      document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/blank.png')";
  document.body.style.backgroundColor = "yellow";
 }
 
-function oarnge(){ 
+function orange(){ 
+            document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/blank.png')";
  document.body.style.backgroundColor = "orange";
 }
 
@@ -129,7 +135,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
  <a href="#" <button onclick="red()">Red</button></a>
  <a href="#" <button onclick="purple()">Purple</button></a>
  <a href="#" <button onclick="yellow()">Yellow</button></a>
-  <a href="#" <button onclick="orange()">Oarnge</button></a>
+  <a href="#" <button onclick="orange()">Orange</button></a>
  <a href="#" <button onclick="blackBlue()">BlackBlue</button></a>
   <a href="#" <button onclick="blackGreen()">BlackGreen</button></a>
   <a href="#" <button onclick="blackRed()">BlackRed</button></a>
