--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
   <a href="#" <button onclick="orange()">Orange</button></a>
  <a href="#" <button onclick="blackBlue()">BlackBlue</button></a>
   <a href="#" <button onclick="blackGreen()">BlackGreen</button></a>
-  <a href="#" <button onclick="blackRed()">BlackRed</button></a>
- <a href="#" <button onclick="blackpurple()">BlackPurple</button></a>
+  <a href="#" <button onclick="blackPurple()">BlackPurple</button></a>
   <a href="#" <button onclick="blackYellow()">BlackYellow</button></a>
  <a href="#" <button onclick="blackOrange()">BlackOrange</button></a>
   </div>
