--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 }
 
 h1 {
+        font-size: 30px;
     color: #000000;
     text-shadow: 1px 1px 2px #00ff00, 0 0 25px #000000, 0 0 5px #00ff00;
   }
