--- a/index.html
+++ b/index.html
@@ -123,10 +123,33 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
 function blackOrange(){ 
 document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/orange.png')";
 }
+
+function mountain(){
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/mountain.png');
+}
+
+function river() {
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/river.png');
+} 
+
+function naruto(){
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/naruto.png');
+}
+
+function dragonBallZ(){
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/dragonballz.png');
+}
+
+function pokemon(){
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/ClockTab/main/pokemon.png');
+}
+
       </script>
 <body onload="startTime()"> 
 
-  <center><h1><div id="txt"><br><div id="date"></h1></div></center>
+  <center><h1><div id="txt">
+    <br><br><br><br><br>
+  <div id="date"></h1></div></center>
   
   <div class="dropdown" style="float:right;">
   <button class="dropbtn">Settings</button>
@@ -142,6 +165,16 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
   <a href="#" <button onclick="blackPurple()">BlackPurple</button></a>
   <a href="#" <button onclick="blackYellow()">BlackYellow</button></a>
  <a href="#" <button onclick="blackOrange()">BlackOrange</button></a>
+ <a href="#" <button onClick="mountain()">Mountain</button></a>
+  <a href="#" <button onClick="river()">River</button></a>
+   <a href="#" <button onClick="naruto()">Naruto</button></a>
+    <a href="#" <button onClick="dragonBallZ()">Dragon Ball Z</button></a>
+     <a href="#" <button onClick="pokemon()">Pokemon</button></a>
+
+
+
+  
+
   </div>
 </div>
         </body>
