--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
       </script>
 <body onload="startTime()"> 
 
-  <center><h1><div id="txt">
-  <div id="date"></h1></div></center>
+  <center><h1><div id="txt"></h1></div></center>
   
   <div class="dropdown" style="float:right;">
   <button class="dropbtn">Settings</button>
