--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-      <body>
             <head>
 <style>
       .dropbtn {
@@ -144,7 +143,7 @@ function pokemon(){
 document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/pokemon.png');
 }
 
-      </script>
+      </script><body>
 <body onload="startTime()"> 
 
   <center><h1><div id="txt"></h1></div></center>
