--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
       </script><body>
 <body onload="startTime()"> 
 
-  <center><h1><div id="txt"></h1></div></center>
+  <center><h1><br><br><br><br><div id="txt"><br></h1></div></center>
   
   <div class="dropdown" style="float:right;">
   <button class="dropbtn">Settings</button>
