--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<html><body onload="startTime()"> 
+
             <head>
 <style>
       .dropbtn {
@@ -142,7 +143,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
 }
 
       </script><body>
-<body onload="startTime()"> 
+ 
 
   <center><h1><br><br><br><br><div id="txt"><br></h1></div></center>
   
