--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html><body onload="startTime()"> 
+<!DOCTYPE html>
 
+<html><body onload="startTime()"> 
+<body>
             <head>
 <style>
       .dropbtn {
@@ -152,9 +154,9 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
   <div class="dropdown-content" style="right:0;">
   <a href="#" <button onclick="blue()">Blue</button></a>
    <a href="#" <button onclick="green()">Green</button></a>
- <a href="#" <button onclick="red()">Red</button></a>
- <a href="#" <button onclick="purple()">Purple</button></a>
- <a href="#" <button onclick="yellow()">Yellow</button></a>
+ <a href="#"> <button onclick="red()">Red</button></a>
+ <a href="#"> <button onclick="purple()">Purple</button></a>
+ <a href="#"> <button onclick="yellow()">Yellow</button></a>
   <a href="#" <button onclick="orange()">Orange</button></a>
  <a href="#" <button onclick="blackBlue()">BlackBlue</button></a>
   <a href="#" <button onclick="blackGreen()">BlackGreen</button></a>
@@ -173,6 +175,6 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
 
   </div>
 </div>
+</head>
         </body>
-        </head>
         </html>
