--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
 }
 
 function mountain(){
-document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/mountain.png');
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/mountain.png')";
 }
 
 function river(){
-document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/river.png');
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/river.png')";
 } 
 
 function naruto(){
-document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/naruto.png');
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/naruto.png')";
 }
 
 function dragonBallZ(){
-document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/dragonballz.png');
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/dragonballz.png')";
 }
 
 function pokemon(){
-document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/pokemon.png');
+document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bobzilla07/TabClock/main/pokemon.png')";
 }
 
       </script><body>
