--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
       </script><body>
  
 
-  <center><h1><br><br><br><br><div id="txt"><br></h1></div></center>
+  
   
   <div class="dropdown" style="float:right;">
   <button class="dropbtn">Settings</button>
   <div class="dropdown-content" style="right:0;">
   <a href="#" <button onclick="blue()">Blue</button></a>
    <a href="#" <button onclick="green()">Green</button></a>
- <a href="#"> <button onclick="red()">Red</button></a>
- <a href="#"> <button onclick="purple()">Purple</button></a>
- <a href="#"> <button onclick="yellow()">Yellow</button></a>
+ <a href="#" <button onclick="red()">Red</button></a>
+ <a href="#" <button onclick="purple()">Purple</button></a>
+ <a href="#" <button onclick="yellow()">Yellow</button></a>
   <a href="#" <button onclick="orange()">Orange</button></a>
  <a href="#" <button onclick="blackBlue()">BlackBlue</button></a>
   <a href="#" <button onclick="blackGreen()">BlackGreen</button></a>
@@ -169,6 +169,7 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
     <a href="#" <button onClick="dragonBallZ()">DragonBallZ</button></a>
      <a href="#" <button onClick="pokemon()">Pokemon</button></a>
 
+<center><h1><br><br><br><br><div id="txt"><br></h1></div></center>
 
 
   
