--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ document.body.style.backgroundImage = "url('https://raw.githubusercontent.com/Bo
     <a href="#" <button onClick="dragonBallZ()">DragonBallZ</button></a>
      <a href="#" <button onClick="pokemon()">Pokemon</button></a>
 </div>
+</div>
 <center><h1><br><br><br><br><div id="txt"><br></h1></div></center>
-
 
 </div>
 </head>
